--- a/springboot/src/main/resources/application.properties
+++ b/springboot/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432\test1?useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useUnicode=yes&characterEncoding=UTF-8
-spring.datasource.username=admin
+spring.datasource.url=jdbc:postgresql://localhost:5432/test1
+spring.datasource.username=postgres
 spring.datasource.password=admin
